--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="card-body text-center p-5">
                 <img src="./assets/avatar.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
                 <h3 class="title card-title mb-3">Ariel Diaz</h3>
-                <p>Naci en la Mendieta estudiante de ingenieria. Actualmente vivo con mis padres. Padre de Bastian que es el gran amor de mi vida!</p>
+                <p>Naci en la Mendieta estudiante de ingenieria. Actualmente vivo con mis padres. Padre de Bastian que es el gran amor de mi vidagit!</p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1 lead"></i></a>
                 <a href="#"><i class="bi bi-linkedin text-dark mx-1 lead"></i></a>
                 <a href="#"><i class="bi bi-github text-dark mx-1 lead"></i></a>
