cambio index agregando avatar
agregue imagen de avatar al index

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="col-md-6 col-lg-4 mb-3">
             <div class="card">
               <div class="card-body text-center p-5">
-                <img src="./assets/avatar.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
+                <img src="./assets/imagen.jpg" alt="avatar" class=" img img-fluid rounded-circle mb-3">
                 <h3 class="title card-title mb-3">Ariel Diaz</h3>
                 <p>Naci en la Mendieta estudiante de ingenieria. Actualmente vivo con mis padres. Padre de Bastian que es el gran amor de mi vidagit!</p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1 lead"></i></a>
